add kakao login button

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,8 @@
     -->
     <title>ORUUM</title>
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+    <script>Kakao.init('0e8f00b28cbf1f43d594ca7279ac6e42');Kakao.isInitialized();</script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
