update website contents

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#fff" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="당신의 자산은 항상 오름! ORUUM과 함께 투자를 쉽게."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo_oruum.png" />
     <!--
